--- a/index.html
+++ b/index.html
@@ -249,23 +249,40 @@
 
 
 <!-- CONTACT -->
-<section id="contact" class="section">
-  <h2>Contact</h2>
-<div class="contact-icons">
-  <a href="https://instagram.com/chromatics_circles" target="_blank">
-    <i class="fab fa-instagram"></i> @chromatics_circles
-  </a>
+<!-- CUSTOMER REVIEWS -->
+<section id="reviews" class="section soft">
+  <h2>Customer Reviews</h2>
 
-  <a href="mailto:chromaticscircles@gmail.com">
-    <i class="fas fa-envelope"></i> chromaticscircles@gmail.com
-  </a>
+  <div class="reviews-wrapper">
+    <div class="review-card">
+      <p>
+        It feels like just yesterday that Deepti created her very first mandala
+        and swept us all off our feet...
+      </p>
+      <strong>— Harini</strong>
+    </div>
 
-  <a href="tel:+919449549036">
-    <i class="fas fa-phone"></i> +91-9449549036
-  </a>
-</div>
-
+    <div class="review-card">
+      <p>
+        I had bought Lippan art from Deepti and I liked it very much.
+        The details are intricately made.
+      </p>
+      <strong>— Arpitha</strong>
+    </div>
+  </div>
 </section>
+
+<!-- CONTACT (BLACK BLOCK) -->
+<section id="contact" class="contact-section">
+  <h2>Contact</h2>
+
+  <div class="contact-icons">
+    <p>📷 chromatics_circles</p>
+    <p>✉ chromaticscircles@gmail.com</p>
+    <p>📞 +91 9449549036</p>
+  </div>
+</section>
+
 
 <footer>
   © 2025 Chromatic Circles
@@ -302,6 +319,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
