--- a/index.html
+++ b/index.html
@@ -212,9 +212,7 @@
     <span class="size">Size: A4</span>
   </div>
 </div>
-
-
-<!-- CUSTOMER REVIEWS -->
+<!-- ================= CUSTOMER REVIEWS ================= -->
 <section id="reviews" class="section soft">
   <h2>Customer Reviews</h2>
 
@@ -226,38 +224,6 @@
         evolved—growing more intricate, complex, and beautifully detailed with
         time. Today, she creates expansive 23-inch designs with remarkable grace,
         passion, and intention.
-        <br><br>
-        What began as a simple hobby has now blossomed into true craftsmanship.
-        Her mandalas have a way of aligning and centering us, almost becoming the
-        quiet core of my own dance practice. Deepti is truly a beautiful, budding
-        artist—one whose work carries peace, elegance, and a sense of calm
-        wherever it reaches.
-      </p>
-      <strong>— Harini</strong>
-    </div>
-
-    <div class="review-card">
-      <p>
-        I had bought Lippan art from Deepti and I liked it very much.
-        The details are intricately made.
-      </p>
-      <strong>— Arpitha</strong>
-    </div>
-
-  </div>
-</section>
-
-
-<!-- CONTACT -->
-<!-- CUSTOMER REVIEWS -->
-<section id="reviews" class="section soft">
-  <h2>Customer Reviews</h2>
-
-  <div class="reviews-wrapper">
-    <div class="review-card">
-      <p>
-        It feels like just yesterday that Deepti created her very first mandala
-        and swept us all off our feet...
       </p>
       <strong>— Harini</strong>
     </div>
@@ -272,8 +238,8 @@
   </div>
 </section>
 
-<!-- CONTACT (BLACK BLOCK) -->
-<section id="contact" class="contact-section">
+<!-- ================= CONTACT ================= -->
+<section id="contact" class="section">
   <h2>Contact</h2>
 
   <div class="contact-icons">
@@ -283,12 +249,23 @@
   </div>
 </section>
 
+<!-- ================= DIVIDER ================= -->
+<hr class="soft-divider">
 
-<footer>
+<!-- ================= CLOSING LINE ================= -->
+<p class="closing-text">
+  <em>
+    Created with patience, precision, and intention.<br>
+    Custom commissions and curated exhibitions available.
+  </em>
+</p>
+
+<!-- ================= FOOTER ================= -->
+<footer class="site-footer">
   © 2025 Chromatic Circles
 </footer>
-<!-- SIGNATURE DIVIDER -->
-<div class="signature-divider"></div>
+
+
 
 <!-- TRUST SIGNAL -->
 <section class="section trust">
@@ -319,6 +296,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
